add temp style for no toolbar, landscape for controller activity, remove constraint layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ControllerActivity" />
+        <activity android:name=".ControllerActivity"
+                  android:screenOrientation="landscape"
+                  android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
