--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:theme="@style/AppTheme">
 
 
-
-        <activity android:name=".main.MainActivity">
+        <activity
+            android:name=".main.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +27,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".controller.ControllerActivity"
-                  android:screenOrientation="landscape"
-                  android:theme="@style/AppTheme.NoActionBar"
-            />
+        <activity
+            android:name=".controller.ControllerActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
